// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BackgroundImage renders 1`] = `
.c0 {
  background-position: center;
  background-size: cover;
  background-repeat: no-repeat;
  background-color: #dde1e4;
}

<div
  className="c0"
/>
`;

exports[`BackgroundImage renders with height 1`] = `
.c0 {
  background-position: center;
  background-size: cover;
  background-repeat: no-repeat;
  background-color: #dde1e4;
  height: 256px;
}

<div
  className="c0"
  height="256px"
/>
`;

exports[`BackgroundImage renders with image 1`] = `
.c0 {
  background-position: center;
  background-size: cover;
  background-repeat: no-repeat;
  background-color: #dde1e4;
  background-image: url(hello.png);
}

<div
  className="c0"
/>
`;
